--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
 Index
 <div>Cookie passed: <%= cookie %></div>
+<div>Signed Cookie passed: <%= signedCookie %></div>
 <div>Session: <%= session %></div>
