--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,17 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h1>PasktChat</h1>
+        <h1 class="pull-left">PasktChat</h1>
+      </div>
+    </div>
+    <div class="col-sm-4 col-sm-offset-4 top-margin">
+      <div class="pull-right">
+        <% if(isAuthenticated){ %>
+          <%- partial('partials/user-login') %>
+        <% }else{ %>
+          <%- partial('partials/user-loggedout') %>
+        <% } %>
+      </div>
     </div>
   </div>
   <div class="row">
