--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,13 @@
     <div class="row">
       <div class="col-sm-12">
         <form action="/login" method="post">
+
+          <% if(message.length){ %>
+            <div class="alert alert-danger">
+              <%= message %>
+            </div>
+          <% } %>
+
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="username">
